--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
 
@@ -21,6 +22,7 @@
 
 <body>
     <h1>Teste Google Fonts</h1>
+    <h2>Título Secundário</h2>
 
     <p>No mundo atual, a consolidação das estruturas ainda não demonstrou convincentemente que vai participar na mudança
         do impacto na agilidade decisória.</p>
