--- a/index.html
+++ b/index.html
@@ -1,37 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <!--Chamada de API de Fonts do Google-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="css/style.css">
-
-
-
+    <title>Nossa Loja</title>
 </head>
-
 <body>
-    <h1>Teste Google Fonts</h1>
-    <h2>Título Secundário</h2>
-
-    <p>No mundo atual, a consolidação das estruturas ainda não demonstrou convincentemente que vai participar na mudança
-        do impacto na agilidade decisória.</p>
-    <p>Assim, a pulsão escópica se vale da tradução metafórica do material cujos efeitos produzem o recalque desta mesma
-        etilogia sexual da neurose.</p>
-    <p>Fala pro cliente que o gerenciador de dependências do frontend deletou todas as entradas do JSON compilado a
-        partir de proto-buffers.</p>
-
-    
+    <h1>Nossa loja em breve!</h1>
 </body>
-
 </html>
