--- a/sobre.html
+++ b/sobre.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+
         rel="stylesheet">
 
 </head>
@@ -21,19 +22,20 @@
         Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
         participação em 118 deles.
     </p>
-    <p>Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que
+    <p>Nosso centro de distribuição fica em <a href=" https://www.google.com.br/maps?q=Jacarezinho" target="_blank" title="Acesse a localizção no mapa.">Jacarezinho, no Paraná</a>. De lá, saem 48 aviões que
         distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:
+      
     </p>
     <figure>
         <img src="img/centro-distribuicao.png" alt="Centro de Distribuição">
         <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
     </figure>
 
-    <p>Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato
-        se tiver dúvidas. Conheça também nossa história e nossos diferenciais.
+    <p>Compre suas roupas e acessórios na Mirror Fashion. Acesse <a href="index.html" title="Boas compras">nossa loja</a> nossa loja ou entre em contato
+        se tiver dúvidas. Conheça também nossa<a href="#historia"> história</a> e nossos <a href="#diferenciais"> diferenciais</a>.
     </p>
 
-    <h2>História</h2>
+    <h2 id="historia">História</h2>
     <figure>
         <img src="img/familia-pelho.jpg" alt="Foto de familia-pelho">
         <figcaption>Familia Pelho</figcaption>
@@ -59,7 +61,7 @@
     </p>
 
 
-    <h2>Diferenciais</h2>
+    <h2 id="diferenciais">Diferenciais</h2>
 
     <ul>
         <li> Menor preço do varejo, garantido</li>
@@ -67,7 +69,7 @@
         <li> Pague em reais, dólares, euros ou bitcoins</li>
         <li> Todas as compras com frete grátis para o mundo todo</li>
         <li> Maior comércio eletrônico de moda do mundo</li>
-        <li> Atendimento via telefone, email, chat, twitter, facebook, carta, fax e telegrama</li>
+        <li> Atendimento via <a href="tel:+553536290003">telefone</a> , <a href="mailto:falelogo@mirror.com">email</a>, chat, twitter, facebook, carta, fax e telegrama</li>
         <li> Presente em 124 países</li>
         <li> Mais de um milhão de funcionários em todo o mundo</li>
         
