--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/estilos.css">
     <title>Nossa Loja</title>
 </head>
+
 <body>
-    <h1>Nossa loja em breve!</h1>
+    <header>
+
+        <h1>
+            <img src="img/logo.png" alt="Mirror Fashion">
+        </h1>
+
+        <p class="sacola">Nemhum item na sacola
+            
+
+        </p>
+        <nav class="menu-opcoes">
+            <ul>
+                <li><a href=""> Conta</a></li>
+                <li><a href="">Lista de Desejos</a></li>
+                <li><a href="">Cartão Fidelidade</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="">Ajuda</a></li>
+
+            </ul>
+
+        </nav>
+
+
+
+
+    </header>
+
+
+
 </body>
+
 </html>
