Lab05 complemento reset

--- a/sobre.html
+++ b/sobre.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="viewport" href="css/reset.css">
     <link rel="stylesheet" href="css/sobre.css">
     <title>A Mirror Fashion</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
