--- a/cadastro.html
+++ b/cadastro.html
@@ -9,8 +9,15 @@
 </head>
 
 <body>
-    <h1>Faça seu cadastro!</h1>
-    <img src="/img/menino e menina.jpg" alt="Ícone de cadastro">
+    <header class="grid-header-container">
+        <div class="top-left">
+            <h1>Cadastre-se!</h1>
+            <h2>Só hoje cadastro promocional!</h2>
+        </div>
+        <div class="top-right">
+            <img src="/img/menino e menina.jpg" alt="Ícone de cadastro">
+    </header>
+    </div>
     <form action="">
 
         <fieldset>
@@ -108,15 +115,15 @@
 
         <div class="grid-button-container">
 
-        <input type="reset" value="Cancelar" name="botaoCancelar">
+            <input type="reset" value="Cancelar" name="botaoCancelar">
 
-        <input type="submit" value="Enviar" name="botaoenviar">
+            <input type="submit" value="Enviar" name="botaoenviar">
 
-    </div>
+        </div>
 
 
     </form>
-
+    <hr>
 </body>
 
 </html>
