--- a/index.html
+++ b/index.html
@@ -71,6 +71,187 @@
 
     </main>
 
+    <div class="container paineis">
+
+        <section class="painel novidades">
+            <h2>Novidades</h2>
+
+            <ol>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura1.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+
+                    </a>
+
+                </li>
+
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura2.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura3.png" alt="Produto">
+
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura4.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura5.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura6.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+
+
+
+
+
+
+
+            </ol>
+
+
+        </section>
+
+        <section class="painel mais-vendidos">
+            <h2>Mais Vendidos</h2>
+
+            <ol>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura7.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura8.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura9.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura10.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura11.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura12.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                </li>
+               
+
+
+        </section>
+    </div>
+
+
+
+
+
+
+
+
+
 
 
 </body>
