--- a/index.html
+++ b/index.html
@@ -238,11 +238,35 @@
 
                 </li>
                 </li>
-               
+
 
 
         </section>
     </div>
+
+    <footer class="container">
+        <img src="img/logo-rodape.png" alt="Logomarma">
+
+        <ul class="social">
+
+            <li><a href="http://facebook.com">Facebook</a></li>
+            <li><a href="http://twitter.com">Twitter</a></li>
+            <li><a href="http://plus.google.com">Google+</a></li>
+
+        </ul>
+
+
+
+
+    </footer>
+
+
+
+
+
+   
+
+
 
 
 
